2006-10-06 00:16-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Minor cleanup in handleNotification: 
	method.

2006-10-05 13:16-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormClassEditor.gorm: Added new gorm file to hold
	classes view contents as well as search and operations drop down.
	* English.lproj/GormDocument.gorm: Removed search and drop down
	* GNUmakefile: Added new gorm file.
	* GormCore/GormClassEditor.h: new outlets classesView and mainView, 
	added declarations for methods createSubclass:, createClassFiles:, 
	instantiateClass:, removeClass:
	* GormCore/GormClassEditor.m: Changes to methods to use the above.
	* GormCore/GormDocument.h: Removed duplicate declarations.
	* GormCore/GormDocument.m: Remove code for methods and replace with
	simple calls to the editor.
	* Palettes/2Controls/GormBoxAttributesInspector.m: ok: and revert:
	changed to convert to integer.  

2006-10-04 22:35-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormCustomView.m: Minor cleanup in initWithFrame:
	* GormCore/GormGormWrapperLoader.m: Added logic to _repairFile
	to correct issue with views that don't have a name in the nametable.
	* GormCore/GormViewWithContentViewEditor.m: Properly add 
	the subview back into the document in ungroup method.

2006-10-04 00:12-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormDocument.gorm: Make connection to 
	fileType in GormFilePrefsManager.
	* GormCore/GormDocumentController.m: Move the window when 
	"New Application" is selected.
	* GormCore/GormDocument.m: Add call in awakeFromNib
	to setFileTypeName:.
	* GormCore/GormFilePrefsManager.h: add setFileTypeName: and
	fileTypeName.
	* GormCore/GormFilePrefsManager.m: add setFileTypeName: and
	fileTypeName.
	* Palettes/4Data/GormTextViewEditor.m: Remove commented out 
	windowAndRect:forObject:

2006-10-01 23:07-EDT Gregory John Casamento <greg_casamento@yahoo.com>
